search function complete

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
         </svg>
       </button>
     </div>
-    <div class="content flex flex-col"></div>
+    <div class="content flex flex-col w-screen"></div>
   </body>
 
   <script src="scripts/script1.js"></script>
