--- a/html/watchlist.html
+++ b/html/watchlist.html
@@ -51,5 +51,6 @@
     <div class="content flex flex-col w-screen"></div>
   </body>
 
-  <script src="../scripts/script2.js"></script>
+  <script type="module" src="../scripts/script1.js"></script>
+  <script type="module" src="../scripts/script2.js"></script>
 </html>
